<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <include layout="@layout/custom_login_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/rkgame" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customer_service_mon_sat_10_00am_10_00pm_sun_11_00am_05_00pm"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_admin_gmail_com"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/et_mpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_round_box"
            android:drawableStart="@drawable/ic_mobile"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/mpin"
            android:inputType="number"
            android:maxLength="4"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="italic" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_round"
            android:text="@string/login_mpin"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>
</RelativeLayout>